5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_1014.log
== TEST (2019-03-26 18:41:57) 
-- CODE:
vendas="total de vendas"
lucro="valor do lucro"
print(round(30%,2))
-- ERROR:
File "XXXX", line 3
    print(round(30%,2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:04) 
-- CODE:
vendas="total de vendas"
lucro="valor do lucro"
print(round(30,2))
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:42:05) 
-- CODE:
vendas="total de vendas"
lucro="valor do lucro"
print(round(30,2))
-- EXECUTION TIME:
0.0989981
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:16) 
-- CODE:
vendas="total de vendas"
lucro="valor do lucro"
print(round(300,2))
-- OUTPUT:
300
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:42:18) 
-- CODE:
vendas="total de vendas"
lucro="valor do lucro"
print(round(300,2))
-- EXECUTION TIME:
0.132468
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
300
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:20) 
-- CODE:
vendas="total de vendas"
lucro="valor do lucro"
print(round(300,2))
-- OUTPUT:
300
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:12) 
-- CODE:
var  = float(input("Total das vendas: "))
vendas = var * 30/100
print(round(vendas, 2))


-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:25) 
-- CODE:
var  = float(input("Total das vendas: "))
vendas = var * 30/100
print(round(vendas, 2))


-- EXECUTION TIME:
0.175764
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
